# document-intelligence-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/versions/: 0004_add_correlation_id_and_dead_letter.py  0005_rag_and_drafting.py  0006_add_grounding_score.py  0007_add_chunk_jurisdiction.py
app/: main.py  security_probe.py
app/api/: deps.py  router.py
app/classification/: base.py  document_types.yaml  hybrid_classifier.py
app/core/: cache.py  config.py  http_runtime.py  logging.py  metrics.py
app/db/: models.py  session.py  vector_types.py
app/extraction/: affidavit.py  bank_statement.py  base.py  case_brief.py  contract.py  defined_terms.py  entities.py  factory.py  invoice.py  legal_complaint.py  legal_notice.py  line_items.py  receipt.py  schema_extractor.py  table_extractor.py
app/ocr/: auto_ocr.py  base.py  factory.py  paddle_ocr.py  preprocessing.py  tesseract_ocr.py  trocr_ocr.py
app/pipelines/: confidence.py  document_pipeline.py
app/rag/: __init__.py  chunker.py  conflict_detector.py  draft_queries.py  draft_service.py  draft_template_loader.py  embedder.py  embedding_service.py  gemini_client.py  jurisdiction.py  (+3 more)
docs/: architecture.md  guardianci-phase-1-smoke.md  tradeoffs.md  walkthrough.md
evaluation/: README.md  eval_drafts.py  eval_improvement.py  eval_retrieval.py
frontend/: index.html
review_ui/: streamlit_app.py
sample_docs/: anf_conflict_report.json  anf_extraction_output.json  sample_conflicts.json  sample_defined_terms.json  sample_draft_output.json  sample_extraction_output.json  sample_improvement_loop.json  sample_legal_complaint.txt
scripts/: guardianci_ai_review.py  local-up.ps1
tests/: conftest.py  test_analytics_api.py  test_cache_storage_webhooks.py  test_classifier.py  test_confidence.py  test_conflict_detector.py  test_documents_api.py  test_extractor_pipeline.py  test_guardian_ci_failure_probe.py  test_guardianci_ai_review.py  test_http_runtime.py  test_legacy_extractors.py  test_legalbench_eval.py  test_new_features.py  test_ocr_and_utilities.py  test_rag_services.py  test_review_api.py  test_services_and_tasks.py  test_validators.py  test_webhooks_api.py
(+77 files in other folders)
